//
//  StringConstants.swift
//  AssignmentPublicis
//
//  Created by Darshana Nagekar on 06/01/25.
//

import Foundation


struct StringConstants {
    
    static let navigationBarTitle = "USER LIST"
    static let accessiblityTextForIndicator = "ProgressIndicator"
    static let refreshButtonText = "Refresh"
    static let noUserFoundText = "No Users Found"
    static let accessiblityTextForLisView = "UserListView"
    static let noInternetConnectionText = "Check your internet connection"
    static let nameText = "Name"
    static let emailText = "Email"
    static let addressText = "Address"
    static let companyText = "Company"
    static let retryText = "Retry"
    static let somethingWentWrongText = "Something Went Wrong"
    static let checkInternetText = "Please check your connection."
    static let pleaseTryAgainTexr = "Please try again."
}
